# GitprofileBuilder

./: .env.example  .gitignore  README.md  profile_readme.md  pyproject.toml
src/: main.py
src/gitprofilebuilder/: __init__.py  config.py  profile_generator.py  readme_builder.py  resume_parser.py  templates.py
src/gitprofilebuilder/experiments/: exp.ipynb
src/gitprofilebuilder/templates/: minimal.md.j2  modern.md.j2
tests/: __init__.py
