[project]
name = "gitprofilebuilder"
version = "0.1.0"
description = "Generate beautiful GitHub profile READMEs from your resume using AI"
authors = [
    {name = "Subhajit Pal", email = "subhajitpal7@gmail.com"},
]
dependencies = [
    "langchain>=0.2.5,<0.4.0",
    "langchain-community>=0.2.5,<0.4.0",
    "pypdfium2>=4.30.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "langchain-google-genai>=2.0.7",
    "click>=8.0.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

keywords = ["github", "profile", "readme", "generator", "resume", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/subhajitpal7/GitprofileBuilder"
Documentation = "https://github.com/subhajitpal7/GitprofileBuilder#readme"
Repository = "https://github.com/subhajitpal7/GitprofileBuilder.git"
Issues = "https://github.com/subhajitpal7/GitprofileBuilder/issues"

[project.scripts]
gitprofile = "gitprofilebuilder.main:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
build = {includes = ["src/gitprofilebuilder"]}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
lint = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.coverage.run]
source = ["gitprofilebuilder"]
omit = ["tests/*"]
